# mac-say-mcp-servers

./: .gitignore  README.md  config.yaml  pyproject.toml  server.py  server_stdio.py
